[tool.poetry]
name = "python-calculator"
version = "0.1.0"
description = ""
authors = ["Denis Bukva <denisbukva@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
replit = "^3.2.4"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
